# fordefi-webhooks

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
api_requests/: broadcast.py
event-examples/: event_personal_massage_signing.json
